--- a/src/WebDevMasterClass/WebDevMasterClass.AppHost/WebDevMasterClass.AppHost.csproj
+++ b/src/WebDevMasterClass/WebDevMasterClass.AppHost/WebDevMasterClass.AppHost.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\WebDevMasterClass.Services.Products\WebDevMasterClass.Services.Products.csproj" />
     <ProjectReference Include="..\..\WebDevMasterClass.Web\WebDevMasterClass.Web.csproj" />
   </ItemGroup>
 
