--- a/tests/WebDevMasterClass.Web.Test/WebDevMasterClass.Web.Test.csproj
+++ b/tests/WebDevMasterClass.Web.Test/WebDevMasterClass.Web.Test.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bazinga.AspNetCore.Authentication.Basic" Version="2.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="FakeItEasy" Version="8.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
