--- a/src/WebDevMasterClass/WebDevMasterClass.AppHost/WebDevMasterClass.AppHost.csproj
+++ b/src/WebDevMasterClass/WebDevMasterClass.AppHost/WebDevMasterClass.AppHost.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\WebDevMasterClass.Services.Products\WebDevMasterClass.Services.Products.csproj" />
+    <ProjectReference Include="..\..\WebDevMasterClass.Web\WebDevMasterClass.Web.csproj" />
+  </ItemGroup>
+
 </Project>
