Cleaned up TestHelper

--- a/tests/WebDevMasterClass.Services.Orders.Tests/WebDevMasterClass.Services.Orders.Tests.csproj
+++ b/tests/WebDevMasterClass.Services.Orders.Tests/WebDevMasterClass.Services.Orders.Tests.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\src\WebDevMasterClass.Services.Orders\WebDevMasterClass.Services.Orders.csproj">
       <Aliases>SERVER</Aliases>
     </ProjectReference>
+    <ProjectReference Include="..\WebDevMasterClass.Testing\WebDevMasterClass.Testing.csproj" />
   </ItemGroup>
 
   <ItemGroup>
